--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="description" content="Realizzazione di un prototipo di web app">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolean Zoom</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -27,10 +29,124 @@
     </main>
 
     <footer>
-        
+
+        <!-- Qui si trovano tutte le icone interattive della piattoforma della web app -->
+
+        <section>
+
+            <!-- In questa sezione posso trovare le features che consentono di impostare il microfono o registrare la videochiamata -->
+
+            <div class="left-section">
+
+                <div class="left-icons"><i class="fa-solid fa-microphone"></i>
+
+                    <div class="text-icon">Mute</div>
+
+                </div>
+
+                <div class="caret-icon">&#94;</div>
+
+                <div class="left-icons"><i class="fa-sharp fa-solid fa-video"></i>
+
+                    <div class="text-icon">Stop Video</div>
+
+                </div>
+
+                <div class="caret-icon">&#94;</div>
+
+            </div>
+
+        </section>
+
+        <section>
+
+            <!-- In questa sezione posso trovare le features che consentono di gestire la piattaforma -->
+
+            <div class="central-section">
+
+                <div class="central-icons"><i class="fa-solid fa-user-plus"></i>
+
+                    <div class="text-icon">Invite</div>
+
+                </div>
+
+                <div class="central-icons"><i class="fa-solid fa-users"></i>
+
+                    <div class="text-icon">Manage Participants</div>
+
+                </div>
+
+                <div class="central-icons"><i class="fa-solid fa-square-poll-vertical"></i>
+
+                    <div class="text-icon">Polling</div>
+
+                </div>
+
+                <div class="central-icons share-icon">
+
+                    <div class="central-icons"><i class="fa-solid fa-share"></i>
+
+                        <div class="text-icon-share-screen">Share Screen</div>
+
+                    </div>
+
+                </div>
+
+                <div>
+
+                    <div class="caret-icon">&#94;</div>
+
+                </div>
+
+                <div class="central-icons"><i class="fa-regular fa-comment"></i>
+
+                    <div class="text-icon">Chat</div>
+
+                </div>
+
+                <div class="central-icons"><i class="fa-regular fa-circle"></i>
+
+                    <div class="text-icon">Record</div>
+
+                </div>
+
+                <div class="central-icons"><i class="fa-brands fa-windows"></i>
+
+                    <div class="text-icon">Breakout Rooms</div>
+
+                </div>
+
+                <div class="central-icons"><i class="fa-solid fa-plus"></i>
+
+                    <div class="text-icon">More</div>
+
+                </div>
+
+
+
+            </div>
+
+
+
+            </div>
+
+
+
+        </section>
+
+        <section>
+
+            <!-- In questa sezione posso trovare la feature per terminare la videochiamata -->
+
+            <div class="leave-meeting">End meeting</div>
+
+        </section>
+
+
+
     </footer>
 
-    
+
 </body>
 
 </html>
