Impostazione griglia main

--- a/index.html
+++ b/index.html
@@ -19,12 +19,167 @@
 
     <header>
 
+        <!-- Qui puoi trovare le proprietà di ridimensionamento della web app -->
+
         <div class="grid-icon"><i class="fa-solid fa-users"></i> <span>Speaker View</span></div>
         <div class="expand-icon"><i class="fa-solid fa-up-right-and-down-left-from-center"></i></div>
 
     </header>
 
     <main>
+
+        <div class="container">
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+
+            </div>
+
+            <div class="card">
+
+                <img src="./img/zoom-img.png" alt="immagine dell'utente">
+                
+            </div>
+            
+        </div>
 
     </main>
 
